--- a/src/app/quickstart/page.mdx
+++ b/src/app/quickstart/page.mdx
@@ -10,7 +10,7 @@ This guide will get you all set up and ready to use the icpay API. We will cover
 
 ## Get your API key
 
-Before you can make requests to the icpay API, you will need to grab your [API key from the icpay dashboard](#). This key is used to authenticate your requests and identify your application to the icpay API.
+Before you can make requests to the icpay API, you will need to grab your [API key from the icpay dashboard](https://icpay.org/auth/login). This key is used to authenticate your requests and identify your application to the icpay API.
 
 ## Choose your API client
 
